# gresg

./: CMakeLists.txt  README.md  main.c  writer.c  writer.h
src/: CMakeLists.txt  argparse.c  argparse.h  main.c  writer.c  writer.h
